[package]
name = "zmqtt2prom-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
prometheus = "0.14"
rumqttc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
